--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/attributeRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/attributeRanks.html
@@ -1,11 +1,11 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
-    <h2>{{vm.attributeType | uppercase}}</h2>
+    <h2>{{vm.attributeTypeName | uppercase}}</h2>
     <br />
     <br />
     <!--<a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>-->
     <br />
     <br />
-    <table class="table table-hover table-condensed table-striped">
+    <table class="table table-hover table-striped table-responsive" style="width: 50%; margin: auto; ">
         <thead>
             <tr>
                 <th>
@@ -13,7 +13,7 @@
                     <span class="sortorder" ng-show="predicate === 'rank'" ng-class="{vm.reverse:vm.reverse}"></span>
                 </th>
                 <th>
-                    <a href="" ng-click="vm.order('Character')">Character</a>
+                    <a href="" ng-click="vm.order('characterName')">Character</a>
                     <span class="sortorder" ng-show="predicate === 'characterName'" ng-class="{vm.reverse:vm.reverse}"></span>
                 </th>
                 <!--<th>
@@ -21,18 +21,19 @@
                     <span class="sortorder" ng-show="predicate === 'name'" ng-class="{vm.reverse:vm.reverse}"></span>
                 </th>-->
                 <th ng-repeat="header in vm.headers">
-                    <a href="" ng-click="vm.order('header')">{{header}}</a>
-                    <span class="sortorder" ng-show="vm.predicate === 'header'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    {{header}}
+                    <!--<a href="" ng-click="vm.order(header)">{{header}}</a>
+                    <span class="sortorder" ng-show="predicate === header" ng-class="{vm.reverse:vm.reverse}"></span>-->
                 </th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="item in vm.attributes | orderBy:vm.predicate:vm.reverse" ng-click="vm.goToCharacter(item)">
                 <td>{{item.rank}}</td>
-                <td><img width="70" height="70" ng-src="{{item.thumbnailUrl}}" /></td>
+                <td>{{item.thumbnailUrl}}<!--<img width="70" height="70" ng-src="{{item.thumbnailUrl}}" />--></td>
                 <!--<td>{{item.name}}</td>-->
-                <td ng-repeat="val in item.values">
-                    {{val}}
+                <td ng-repeat="val in item.rawValues">
+                    {{val.value}}
                 </td>
                 <!--<td>{{item.value}}</td>-->
             </tr>
