--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
@@ -4,43 +4,49 @@
     <!--<span class="glyphicon glyphicon-floppy-disk" ng-click="vm.saveCharacterChanges()"></span>-->
 
     <div class="container fade-in two">
+        <form class="form-horizontal" >
+            <fieldset>
+                <div class="well col-lg-6">
+                    <h4>Basic info:</h4>
+                    <input type="text" class="form-control" value="{{vm.character.name}}" ng-model="vm.character.name" placeholder="Character Name..." />
+                    <br />
+                    <hr />
+                    <h4>Details:</h4>
+                    <textarea class="form-control" rows="3" id="textArea" ng-model="vm.character.description" placeholder="Description..."></textarea>
+                    <br />
+                    <input type="text" class="form-control" style="color: black;" value="" ng-model="vm.character.style" placeholder="Style..." />
+                    <br />
+                    <hr />
+                    <h4>Imagery:</h4>
+                    <div>
+                        <label title="Used when viewing character page">Main Image Url:</label>
+                        <!--<input type="file" value="..." ng-model="vm.character.mainImageUrl"/>-->
+                        <input type="text" class="form-control" style="width: 100%;" value="{{vm.character.mainImageUrl}}" ng-model="vm.character.mainImageUrl" />
+                    </div>
+                    <br />
+                    <div>
+                        <label title="Used when viewing the roster page">Tile Image Url:</label>
+                        <!--<input type="file" value="..." ng-model="vm.character.thumbnailUrl"/>-->
+                        <input type="text" class="form-control" style="width: 100%;" value="{{vm.character.thumbnailUrl}}" ng-model="vm.character.thumbnailUrl" />
+                    </div>
 
-        <h4>Basic info:</h4>
-        <input type="text" class="form-control" value="{{vm.character.name}}" ng-model="vm.character.name" placeholder="Character Name..." />
-        <br />
-        <hr />
-        <h4>Details:</h4>
-        <textarea class="form-control" rows="3" id="textArea" ng-model="vm.character.description" placeholder="Description..."></textarea>
-        <br />
-        <input type="text" class="form-control" style="color: black;" value="" ng-model="vm.character.style" placeholder="Style..." />
-        <br />
-        <hr />
-        <h4>Imagery:</h4>
-        <div>
-            <label title="Used when viewing character page">Main Image Url:</label>
-            <!--<input type="file" value="..." ng-model="vm.character.mainImageUrl" />-->
-            <input type="text" class="form-control" style="width:100%;" value="{{vm.character.mainImageUrl}}" ng-model="vm.character.mainImageUrl" />
-        </div>
-        <br />
-        <div>
-            <label title="Used when viewing the roster page">Tile Image Url:</label>
-            <!--<input type="file" value="..." ng-model="vm.character.thumbnailUrl" />-->
-            <input type="text" class="form-control" style="width:100%;" value="{{vm.character.thumbnailUrl}}" ng-model="vm.character.thumbnailUrl" />
-        </div>
+                    <!--<div style="text-align:center">
+                    <img ng-src="{{vm.character.mainImageUrl}}"
+                         alt="{{vm.character.name}}" style="margin:auto"/>-->
+                    <hr />
 
-        <!--<div style="text-align:center">
-            <img ng-src="{{vm.character.mainImageUrl}}"
-                 alt="{{vm.character.name}}" style="margin:auto" />-->
-
-        <hr />
-        <a href="" class="btn btn-success" ng-click="vm.saveCharacterDetailsChanges()">Save Metadata Changes</a>
+                    <hr />
+                    <a href="" class="btn btn-success" ng-click="vm.saveCharacterDetailsChanges()">Save Metadata Changes</a>
+                </div>
+            </fieldset>
+        </form>
         <hr />
         <br />
         <br />
         <br />
 
-        <input type="button" ng-click="vm.showMovementRow()" value="Add new movement stat" />
-        <div ng-show="vm.showNewMovementRow">
+        <input type="button" class="btn btn-success" ng-click="vm.showMovementRow()" value="Add new movement stat" />
+        <div ng-show="vm.showNewMovementRow" class="well">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -50,13 +56,13 @@
                 </thead>
                 <tr>
                     <td>
-                        <input type="text" style="color:black;" value="" ng-model="vm.newMovementStat.name" />
+                        <input type="text" class="form-control" style="color:black;" value="" ng-model="vm.newMovementStat.name" />
                     </td>
                     <td>
-                        <input type="text" style="color:black;" value="" ng-model="vm.newMovementStat.value" />
+                        <input type="text" class="form-control" style="color:black;" value="" ng-model="vm.newMovementStat.value" />
                     </td>
                     <td>
-                        <input type="button" style="color:black;" ng-click="vm.createNewMovementStat()" value="Create" />
+                        <input type="button" class="btn btn-success" ng-click="vm.createNewMovementStat()" value="Create" />
                     </td>
                 </tr>
             </table>
@@ -89,8 +95,8 @@
         <br />
         <br />
         <!--<h6 style="float:left;">Sorting by: {{vm.predicate}}</h6>-->
-        <input type="button" ng-click="vm.showMoveRow()" value="Add new move" />
-        <div ng-show="vm.showNewMoveRow">
+        <input type="button" class="btn btn-success" ng-click="vm.showMoveRow()" value="Add new move" />
+        <div ng-show="vm.showNewMoveRow" class="well">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -134,7 +140,7 @@
                         <input type="text" class="form-control" style="color: black;" ng-model="vm.newMoveStat.autoCancel" />
                     </td>
                     <td>
-                        <input type="button" class="form-control" style="color: black;" ng-click="vm.createNewMoveStat()" value="Create" />
+                        <input type="button" class="btn btn-success" ng-click="vm.createNewMoveStat()" value="Create" />
                     </td>
                 </tr>
             </table>
@@ -142,9 +148,6 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>
-                        <span>Edit</span>
-                    </th>
                     <th title="Name">
                         <a href="">Name</a>
                         <span ng-show="vm.predicate === 'name'" ng-class="{vm.reverse:vm.reverse}"></span>
@@ -173,6 +176,10 @@
                         <a href="">KBG</a>
                         <span ng-show="vm.predicate === 'knockbackGrowth'" ng-class="{vm.reverse:vm.reverse}"></span>
                     </th>
+                    <th title="Type">
+                        <a href="" ng-click="vm.order('type')">Type</a>
+                        <span ng-show="vm.predicate === 'type'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
                     <th title="Landing Lag">
                         <a href="">LandingLag</a>
                         <span ng-show="vm.predicate === 'landingLag'" ng-class="{vm.reverse:vm.reverse}"></span>
@@ -181,16 +188,14 @@
                         <a href="">AutoCancel</a>
                         <span ng-show="vm.predicate === 'autoCancel'" ng-class="{vm.reverse:vm.reverse}"></span>
                     </th>
+                    <th>
+                        <span>Edit</span>
+                    </th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="item in vm.moveData | orderBy:vm.predicate:vm.reverse">
-                    <td>
-                        <span>
-                            <span title="save" class="glyphicon glyphicon-floppy-disk" ng-click="vm.saveMoveRow(item)"></span>
-                            <span title="delete" class="glyphicon glyphicon-remove" ng-click="vm.deleteMoveRow(item)"></span>
-                        </span>
-                    </td>
+
                     <td>
                         <input type="text" class="form-control" style="color:black;" value="{{item.name}}" ng-model="item.name" />
                     </td>
@@ -213,10 +218,17 @@
                         <input type="text" class="form-control" style="color: black;" value="{{item.knockbackGrowth}}" ng-model="item.knockbackGrowth" />
                     </td>
                     <td>
+                        <input type="text" class="form-control" style="color: black;" value="{{item.type}}" ng-model="item.type" />
+                    </td>
+                    <td>
                         <input type="text" class="form-control" style="color: black;" value="{{item.landingLag}}" ng-model="item.landingLag" />
                     </td>
                     <td>
                         <input type="text" class="form-control" style="color: black;" value="{{item.autoCancel}}" ng-model="item.autoCancel" />
+                    </td>
+                    <td>
+                        <span title="save" class="glyphicon glyphicon-floppy-disk" ng-click="vm.saveMoveRow(item)"></span>
+                        <span title="delete" class="glyphicon glyphicon-remove" ng-click="vm.deleteMoveRow(item)"></span>
                     </td>
                 </tr>
             </tbody>
