--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/Areas/HelpPage/Views/Help/Index.cshtml
@@ -4,7 +4,7 @@
 @model Collection<ApiDescription>
 
 @{
-    ViewBag.Title = "ASP.NET Web API Help Page";
+    ViewBag.Title = "KuroganeHammer API Help Page";
 
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
