- Second major checkin for datasynchro app - Plumbing for updating database objects complete - Added Update and Delete calls to BaseModel so that it's easier to update an object without making calls manually - Added windows for a characters details (this is where moves, movements and metadata go) as well as a window for editing a specific object - Now confirming before deletion of objects

--- a/KuroganeHammer.DataSynchro/LoginWindow.xaml
+++ b/KuroganeHammer.DataSynchro/LoginWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:KuroganeHammer.DataSynchro"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="DataSynchro - Login" Height="200" Width="300" ResizeMode="NoResize" Background="#FFEEEEEE" WindowStyle="None" UseNoneWindowStyle="True" >
+        Title="DataSynchro - Login" Height="200" Width="300" ResizeMode="NoResize" Background="#FFEEEEEE" WindowStyle="None" UseNoneWindowStyle="True" 
+                      BorderThickness="0" GlowBrush="Black">
     <Grid MouseDown="Grid_MouseDown">
         <Grid.Background>
             <ImageBrush AlignmentY="Top" ImageSource="images/KH LOGO1.png" Opacity="0.2" Stretch="Uniform">
