--- a/KuroganeHammer.DataSynchro/CharacterWindow.xaml
+++ b/KuroganeHammer.DataSynchro/CharacterWindow.xaml
@@ -1,23 +1,23 @@
-﻿<controls1:MetroWindow x:Class="KuroganeHammer.DataSynchro.CharacterWindow"
+﻿<controls:MetroWindow x:Class="KuroganeHammer.DataSynchro.CharacterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KuroganeHammer.DataSynchro"
-        xmlns:controls="clr-namespace:KuroganeHammer.DataSynchro.Controls"
-        xmlns:controls1="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:customControls="clr-namespace:KuroganeHammer.DataSynchro.Controls"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="{Binding Path=Character.Name}" Height="768" Width="1366" BorderThickness="0" GlowBrush="Black" Background="#FFEEEEEE">
     <Grid>
         <TabControl Name="MainTabControl" SelectionChanged="MainTabControl_SelectionChanged">
-            <TabItem Name="CharactersTabItem" Header="{Binding Path=Character.Name, Mode=OneWay, StringFormat=Editing - {0}}" >
+            <TabItem Name="CharactersTabItem" Header="Details" >
                 <Grid Name="CharacterPropertiesGrid">
                     <!--<Button Name="CreateCharacterButton" Content="New Character" Grid.Row="0" Grid.Column="0" Margin="2"/>-->
                     <!--<DataGrid Name="MovesDataGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" AutoGenerateColumns="True"
                               ItemsSource="{Binding Characters}" Margin="5" MouseDoubleClick="CharactersDataGrid_Row_DoubleClick"/>-->
                 </Grid>
             </TabItem>
-            <TabItem Name="MovesTabItem" Header="Moves" >
+            <!--<TabItem Name="MovesTabItem" Header="Moves" >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"/>
@@ -28,12 +28,21 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Button Name="CreateMoveButton" Content="New Move" Grid.Row="0" Grid.Column="0" Margin="2"/>
+                    <customControls:BusyControl Grid.Row="0" Grid.Column="1" Margin="2"/>
                     <DataGrid Name="MovesDataGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" AutoGenerateColumns="True" IsReadOnly="True"
-                              ItemsSource="{Binding Moves}" Margin="5" MouseDoubleClick="MovesDataGrid_Row_DoubleClick"  Background="White"/>
+                              ItemsSource="{Binding Moves}" Margin="5" MouseDoubleClick="MovesDataGrid_Row_DoubleClick"/>
                 </Grid>
+            </TabItem>-->
+            <TabItem Header="Moves">
+                <customControls:ObjectsTabItem DataContext="{Binding}" DataGridItemsSource="{Binding Moves}"/>
             </TabItem>
-            
+            <TabItem Header="Movements">
+                <customControls:ObjectsTabItem DataContext="{Binding}" DataGridItemsSource="{Binding Movements}"/>
+            </TabItem>
+            <TabItem Header="Attributes">
+                <customControls:ObjectsTabItem DataContext="{Binding}" DataGridItemsSource="{Binding CharacterAttributes}"/>
+            </TabItem>
         </TabControl>
     </Grid>
-</controls1:MetroWindow>
+</controls:MetroWindow>
 
