--- a/KuroganeHammer.DataSynchro/LoginWindow.xaml
+++ b/KuroganeHammer.DataSynchro/LoginWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="DataSynchro - Login" Height="200" Width="300" ResizeMode="NoResize" Background="#FFEEEEEE" WindowStyle="None" UseNoneWindowStyle="True" 
-                      BorderThickness="0" GlowBrush="Black">
+                      BorderThickness="1" GlowBrush="Black" WindowStartupLocation="CenterScreen" KeyUp="MetroWindow_KeyUp">
     <Grid MouseDown="Grid_MouseDown">
         <Grid.Background>
             <ImageBrush AlignmentY="Top" ImageSource="images/KH LOGO1.png" Opacity="0.2" Stretch="Uniform">
