--- a/KuroganeHammer.DataSynchro/CharacterWindow.xaml
+++ b/KuroganeHammer.DataSynchro/CharacterWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:customControls="clr-namespace:KuroganeHammer.DataSynchro.Controls"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="{Binding Path=Character.Name}" Height="768" Width="1366" BorderThickness="0" GlowBrush="Black" Background="#FFEEEEEE">
+        Title="{Binding Path=Character.Name}" Height="768" Width="1366" BorderThickness="0" GlowBrush="Black" Background="#FFEEEEEE"
+                      WindowStartupLocation="CenterOwner">
     <Grid>
         <TabControl Name="MainTabControl" SelectionChanged="MainTabControl_SelectionChanged">
             <TabItem Name="CharactersTabItem" Header="Details" >
